Updated the viewport

--- a/responsive.css
+++ b/responsive.css
@@ -371,3 +371,10 @@ unset;}
 @media (max-width: 450px) {
    .ABT_Home_Submit{max-width: 100%!important;}
 }
+
+@media (max-width: 346px){
+   .secondary-menu{display:none}
+   .menu-container{top: unset;}
+   .main-nav{border-radius: 0px; position: unset}
+   .toggleMenu{top: 220px}
+}
